# agent

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PRINCIPLES.md  README.md  agent  bootstrap.sh  install.sh  mise.toml  onboard.sh  pull.sh  pyproject.toml
.github/validators/: validate_bash_scripts.sh
.github/workflows/: agent-label.reusable.yml  ci.yml  container.yml  issue-agent.reusable.yml  issue-resume.reusable.yml  pr-agent.reusable.yml  pr-review.reusable.yml
agentcli/: __init__.py  __main__.py  cli.py  config.py  credential.py  creds.py  doctor.py  errors.py  git.py  github.py  install.py  issue_enable.py  labpass.py  pull.py  repos.py  rules.py  rulesets.py  skills.py  ssh.py  workspace.py
agentcli/bundle_templates/: pre-commit-ci.yml  pre-commit-config.yaml
agentcli/ruleset_defs/: protect-main-pr-only.json
agentcli/workflow_templates/: agent-label.yml  issue-agent.yml  issue-resume.yml  pr-agent.yml  pr-review.yml
issue_agent/: agent.py  default-playbook.md  requirements.txt  s3_session_store.py
issue_agent/providers/: __init__.py  base.py  claude.py
rules/: host-notes.md  working-with-brujoand.md
ruleset_defs/: protect-main-pr-only.json
scripts/: sync-agent-secret.sh  sync-repo-secret.sh
skills/: README.md
skills/working-with-brujoand/: SKILL.md
tests/: conftest.py  test_agent_loop.py  test_claude_provider.py  test_credential.py  test_creds.py  test_github.py  test_issue_enable.py  test_providers_base.py  test_pull.py  test_repos.py  test_rules.py  test_rulesets.py  test_seed_config.py  test_skills.py  test_ssh.py  test_workspace.py
