[project]
name = "agentcli"
version = "0.1.0"
description = "Agent CLI: credentials, repos, worktrees, and a lab wrapper"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.15.0",
  "httpx>=0.28.0",
  "cryptography>=42.0",
]

[project.scripts]
agent = "agentcli.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-httpx>=0.35",
  "ruff>=0.9.0",
  # For the issue_agent provider tests only: importing the SDK needs no Claude
  # Code CLI (only running a client does), and testing the adapter against the
  # real SDK types beats hand-rolled fakes that would rot. Pin MUST match
  # issue_agent/requirements.txt (the runtime venv) — keep in sync.
  "claude-agent-sdk==0.2.110",
  "anyio>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# s3_session_store.py is vendored verbatim from the Claude Agent SDK examples;
# linting it would fork it from upstream for no benefit. The rest of issue_agent/
# (agent.py + providers/) is ours — owned since the provider-abstraction refactor
# — and lint-covered like everything else, even though it runs in its own
# /opt/issue-agent venv.
extend-exclude = ["issue_agent/s3_session_store.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "S"]
# S101 (assert): pytest uses asserts. S603/S607 (subprocess): all calls use
# fixed argv lists, never shell=True -- flagged but reviewed safe.
ignore = ["E501", "B008", "SIM108", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# S101 (assert): pytest. S105: test fixtures name fake tokens/URLs, not secrets.
"tests/**" = ["S101", "S105"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
